--- a/StartupCarvaan/app/src/main/res/layout/single_transaction.xml
+++ b/StartupCarvaan/app/src/main/res/layout/single_transaction.xml
@@ -124,6 +124,7 @@
               android:text="Delete"
               android:layout_marginTop="10dp"
               android:textColor="@color/white"
+              android:backgroundTint="@color/green"
               />
 
         </LinearLayout>
