--- a/StartupCarvaan/app/src/main/res/layout/single_transaction.xml
+++ b/StartupCarvaan/app/src/main/res/layout/single_transaction.xml
@@ -119,6 +119,7 @@
                     />
             </LinearLayout>
           <Button
+              android:id="@+id/delete_btn_trs"
               android:layout_width="wrap_content"
               android:layout_height="40dp"
               android:text="Delete"
