--- a/StartupCarvaan/app/src/main/res/layout/single_transaction.xml
+++ b/StartupCarvaan/app/src/main/res/layout/single_transaction.xml
@@ -28,7 +28,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Startupname"
-                    android:textSize="15sp"
+                    android:textSize="16sp"
                     android:layout_marginLeft="15dp"
                     android:textColor="@color/blue"
                     android:textStyle="bold"
@@ -44,6 +44,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:text="Bought/sold"
+                    android:textStyle="bold"
                     android:textColor="@color/black"
                     android:id="@+id/bought_sold_trs"
                     />
@@ -95,38 +96,55 @@
                     android:textStyle="bold"
                     android:id="@+id/price_trs"
                     />
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:text="Total amount :"
-                    android:textSize="13dp"
-                    android:layout_marginLeft="20dp"
-
-                    android:textColor="@color/black"
-                    />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:text="100000"
-                    android:id="@+id/amount_trs"
-                    android:layout_marginLeft="8dp"
-                    android:textColor="@color/goodgrey"
-                    android:textSize="13dp"
-                    android:textStyle="bold"
 
 
-                    />
             </LinearLayout>
-          <Button
-              android:id="@+id/delete_btn_trs"
-              android:layout_width="wrap_content"
-              android:layout_height="40dp"
-              android:text="Delete"
-              android:layout_marginTop="10dp"
-              android:textColor="@color/white"
-              android:backgroundTint="@color/green"
-              />
+          <LinearLayout
+              android:layout_width="match_parent"
+
+              android:gravity="center_vertical"
+              android:layout_height="wrap_content">
+              <TextView
+                  android:layout_width="wrap_content"
+                  android:layout_height="match_parent"
+                  android:text="Total amount :"
+                  android:gravity="center"
+                  android:textSize="13dp"
+                  android:layout_marginLeft="15dp"
+
+                  android:textColor="@color/black"
+                  />
+
+              <TextView
+                  android:layout_width="wrap_content"
+                  android:layout_height="match_parent"
+                  android:text="100000"
+                  android:gravity="center"
+                  android:id="@+id/amount_trs"
+                  android:layout_marginLeft="8dp"
+                  android:textColor="@color/goodgrey"
+                  android:textSize="13dp"
+                  android:textStyle="bold"/>
+              <LinearLayout
+                  android:layout_width="match_parent"
+                  android:layout_height="wrap_content"
+                  android:layout_marginRight="15dp"
+                  android:gravity="right">
+              <Button
+                  android:id="@+id/delete_btn_trs"
+                  android:layout_width="wrap_content"
+                  android:layout_height="33dp"
+                  android:text="Delete"
+                  android:textSize="10dp"
+
+                  android:textColor="@color/white"
+                  android:backgroundTint="@color/green"
+                  />
+              </LinearLayout>
+
+
+          </LinearLayout>
+
 
         </LinearLayout>
 </androidx.cardview.widget.CardView>
