--- a/StartupCarvaan/app/src/main/res/layout/z_single_allshare.xml
+++ b/StartupCarvaan/app/src/main/res/layout/z_single_allshare.xml
@@ -47,6 +47,7 @@
                     android:textSize="19sp"
                     android:layout_marginLeft="26dp"/>
                 <ImageView
+                    android:id="@+id/performance"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:layout_marginLeft="10dp"
