--- a/StartupCarvaan/app/src/main/res/layout/activity_blogging.xml
+++ b/StartupCarvaan/app/src/main/res/layout/activity_blogging.xml
@@ -23,7 +23,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Investment Period"
+            android:text="Buy"
             android:textColor="@color/white"
             android:textSize="17sp"
             android:layout_marginLeft="20dp"
